--- a/app/src/main/res/layout/location_list_fragment_view.xml
+++ b/app/src/main/res/layout/location_list_fragment_view.xml
@@ -6,7 +6,21 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+ <androidx.recyclerview.widget.RecyclerView
+     android:id="@+id/rv_location_list"
+     android:layout_width="match_parent"
+     android:layout_height="0dp"
+     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+     android:orientation="vertical"
+     android:padding="5dp"
+     app:layout_constraintTop_toTopOf="parent"
+     app:layout_constraintBottom_toBottomOf="parent"
+     app:layout_constraintStart_toStartOf="parent"
+     app:layout_constraintEnd_toEndOf="parent"
+     tools:listitem="@layout/location_list_item" />
+
  <TextView
+     android:id="@+id/location_list_text"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      app:layout_constraintTop_toTopOf="parent"
